--- a/_pgbackup/index_1704927013.html
+++ b/_pgbackup/index_1704927013.html
@@ -11,59 +11,41 @@
     <body class="bg-white md:flex md:flex-col md:items-center" style="overflow-x: hidden">
         <div class="flex flex-col min-h-screen items-center max-h-[900px] md:max-w-2xl">
             <div class="flex mt-4">
-                <div class="flex items-center justify-center w-full"><a href="https://www.google.com"><img src="images/Screenshot%202024-01-08%20094916.png" class="text-left w-64"></a>
+                <div class="flex items-center justify-center w-full">
+                    <a href="https://www.google.com"><img src="images/Screenshot%202024-01-08%20094916.png" class="text-left w-64"></a>
                 </div>
             </div>
-            <div class="flex flex-grow flex-row max-w-full overflow-x-scroll pb-16 pl-5 pr-10 pt-5 md:overflow-x-visible" id="carousel">
-                <div class="cursor-pointer duration-300 ease-in-out flex flex-col hover:opacity-100 min-h-full min-w-full transition md:opacity-5" data-pgc="carousel-item" data-pgc-field="header image">
+            <div class="flex flex-grow flex-row max-w-full pl-5 pr-10 py-5" id="carousel">
+                <div id="btn-next" class="absolute border-none bottom-8 h-10 right-8 text-center w-10">&gt;</div>
+                <div id="btn-prev" class="absolute border-none bottom-8 h-10 right-16 text-center w-10">&lt;</div>
+                <div id="carousel-1" class="flex flex-col min-h-full min-w-full max-w-screen">
                     <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl">
-                        <img class="aspect-auto min-h-full object-center object-cover" src="images/hsiuying%201.jpg" data-pgc-field="Hero Image">
+                        <img class="aspect-auto min-h-full object-center object-cover" src="images/5F432A68-F467-4EC7-AE8F-0D962F6183AC.jpg">
                     </div>
                     <div class="m-3">
-                        <p class="font-semibold font-serif mb-3 text-2xl" data-pgc-field="Title">Amata Meditation Center</p>
-                        <p class="font-serif text-xl" data-pgc-field="Location 1">Boyds, Maryland</p>
-                        <p class="font-serif italic text-xl" data-pgc-field="Location 2">USA</p>
+                        <p class="font-semibold font-serif mb-3 text-2xl">Amata Meditation Center</p>
+                        <p class="font-serif text-xl"> Boyds, Maryland</p>
+                        <p class="font-serif italic text-xl">USA</p>
                     </div>
                 </div>
-                <div class="cursor-pointer duration-300 ease-in-out flex flex-col hover:opacity-100 min-h-full min-w-full transition md:opacity-5" data-pgc="carousel-item" data-pgc-field="header image">
+                <div class="flex flex-col min-h-full min-w-full">
                     <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl">
-                        <img class="aspect-auto min-h-full object-center object-cover" src="images/uszen_exterior_day.jpg" data-pgc-field="Hero Image">
+                        <img class="aspect-auto min-h-full object-center object-cover" src="images/uszen_exterior_day.jpg">
                     </div>
                     <div class="m-3">
-                        <p class="font-semibold font-serif mb-3 text-2xl" data-pgc-field="Title">US Zen Institute</p>
-                        <p class="font-serif text-xl" data-pgc-field="Location 1">Germantown, Maryland</p>
-                        <p class="font-serif italic text-xl" data-pgc-field="Location 2">USA</p>
+                        <p class="font-semibold font-serif mb-3 text-2xl">US Zen Institute</p>
+                        <p class="font-serif text-xl">Germantown, Maryland</p>
+                        <p class="font-serif italic text-xl">USA</p>
                     </div>
                 </div>
-                <div class="cursor-pointer duration-300 ease-in-out flex flex-col hover:opacity-100 min-h-full min-w-full transition md:opacity-5" data-pgc="carousel-item" data-pgc-field="header image">
+                <div class="flex flex-col min-h-full min-w-full">
                     <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl">
-                        <img class="aspect-auto min-h-full object-center object-cover" src="images/ed3fca_bff95a3760314a24a0dce6b75f44a29e~mv2_d_4730_2660_s_4_2.webp" data-pgc-field="Hero Image">
+                        <img class="aspect-auto min-h-full object-center object-cover" src="images/Scuba-Diving-SAbah-Malaysia-Banner%20(1).jpg">
                     </div>
                     <div class="m-3">
-                        <p class="font-semibold font-serif mb-3 text-2xl" data-pgc-field="Title">Mount Kinabalu
-Meditation Centre</p>
-                        <p class="font-serif text-xl" data-pgc-field="Location 1">Mount Kinabalu, Sabah</p>
-                        <p class="font-serif italic text-xl" data-pgc-field="Location 2">Malaysia</p>
-                    </div>
-                </div>
-                <div class="cursor-pointer duration-300 ease-in-out flex flex-col hover:opacity-100 min-h-full min-w-full transition md:opacity-5" data-pgc-define="carousel-item" data-pgc-define-name="Carousel Item" data-pgc-edit="header image">
-                    <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl">
-                        <img class="aspect-auto min-h-full object-center object-cover" src="images/20230211_p_20.jpg" data-pgc-edit="Hero Image[src]">
-                    </div>
-                    <div class="m-3">
-                        <p class="font-semibold font-serif mb-3 text-2xl" data-pgc-edit="Title">中華習禪會</p>
-                        <p class="font-serif text-xl" data-pgc-edit="Location 1">Zhongpu, Chiayi</p>
-                        <p class="font-serif italic text-xl" data-pgc-edit="Location 2">Taiwan</p>
-                    </div>
-                </div>
-                <div class="cursor-pointer duration-300 ease-in-out flex flex-col hover:opacity-100 min-h-full min-w-full transition md:opacity-5" data-pgc="carousel-item" data-pgc-field="header image">
-                    <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl">
-                        <img class="aspect-auto min-h-full object-center object-cover" src="images/Looking_over_towards_Zhangshuhu%20(1).jpg" data-pgc-field="Hero Image">
-                    </div>
-                    <div class="m-3">
-                        <p class="font-semibold font-serif mb-3 text-2xl" data-pgc-field="Title">聖默禪院&nbsp;&nbsp;</p>
-                        <p class="font-serif text-xl" data-pgc-field="Location 1">Meishan Mountain</p>
-                        <p class="font-serif italic text-xl" data-pgc-field="Location 2">Taiwan</p>
+                        <p class="font-semibold font-serif mb-3 text-2xl">Kota Kinabalu Meditation Society</p>
+                        <p class="font-serif text-xl">Kota Kinabalu, Sabah</p>
+                        <p class="font-serif italic text-xl">Malaysia</p>
                     </div>
                 </div>
             </div>
