--- a/_pgbackup/index_1704929793.html
+++ b/_pgbackup/index_1704929793.html
@@ -8,53 +8,61 @@
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
         <script>/* Pinegrow Interactions, do not remove */ (function(){try{if(!document.documentElement.hasAttribute('data-pg-ia-disabled')) { window.pgia_small_mq=typeof pgia_small_mq=='string'?pgia_small_mq:'(max-width:767px)';window.pgia_large_mq=typeof pgia_large_mq=='string'?pgia_large_mq:'(min-width:768px)';var style = document.createElement('style');var pgcss='html:not(.pg-ia-no-preview) [data-pg-ia-hide=""] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show=""] {opacity:1;visibility:visible;display:block;}';if(document.documentElement.hasAttribute('data-pg-id') && document.documentElement.hasAttribute('data-pg-mobile')) {pgia_small_mq='(min-width:0)';pgia_large_mq='(min-width:99999px)'} pgcss+='@media ' + pgia_small_mq + '{ html:not(.pg-ia-no-preview) [data-pg-ia-hide="mobile"] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show="mobile"] {opacity:1;visibility:visible;display:block;}}';pgcss+='@media ' + pgia_large_mq + '{html:not(.pg-ia-no-preview) [data-pg-ia-hide="desktop"] {opacity:0;visibility:hidden;}html:not(.pg-ia-no-preview) [data-pg-ia-show="desktop"] {opacity:1;visibility:visible;display:block;}}';style.innerHTML=pgcss;document.querySelector('head').appendChild(style);}}catch(e){console&&console.log(e);}})()</script>
     </head>
-    <body class="bg-white md:flex md:flex-col md:items-center">
-        <div class="flex flex-col h-screen items-center max-h-[900px] md:max-w-2xl">
-            <div class="flex mt-4" data-pg-collapsed>
-                <div class="flex items-center justify-center w-full" data-pg-collapsed><a href="https://www.google.com" data-pg-collapsed><img src="images/Screenshot%202024-01-08%20094916.png" class="text-left w-64"></a>
+    <body class="bg-white md:flex md:flex-col md:items-center" style="overflow-x: hidden">
+        <div class="flex flex-col min-h-screen items-center max-h-[900px] md:max-w-2xl">
+            <div class="flex mt-4">
+                <div class="flex items-center justify-center w-full"><a href="https://www.google.com"><img src="images/Screenshot%202024-01-08%20094916.png" class="text-left w-64"></a>
                 </div>
             </div>
-            <div class="flex flex-grow flex-row max-w-full overflow-auto p-5" id="carousel">
-                <div id="btn-next" class="absolute border-none bottom-8 h-10 right-8 text-center w-10">&gt;</div>
-                <div id="btn-prev" class="absolute border-none bottom-8 h-10 right-16 text-center w-10">&lt;</div>
-                <div id="carousel-1" class="flex flex-col h-full min-w-full" data-pg-collapsed>
-                    <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl" data-pg-collapsed>
-                        <img class="aspect-auto min-h-full object-center object-cover" src="images/5F432A68-F467-4EC7-AE8F-0D962F6183AC.jpg">
+            <div class="flex flex-grow flex-row max-w-full overflow-x-scroll pb-16 pl-5 pr-10 pt-5 md:overflow-x-visible" id="carousel">
+                <div class="cursor-pointer duration-300 ease-in-out flex flex-col hover:opacity-100 min-h-full min-w-full transition md:opacity-5" data-pgc="carousel-item" data-pgc-field="header image">
+                    <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl">
+                        <img class="aspect-auto min-h-full object-center object-cover" src="images/hsiuying%201.jpg" data-pgc-field="Hero Image">
                     </div>
-                    <div class="m-3" data-pg-collapsed>
-                        <p class="font-semibold font-serif mb-3 text-2xl">Amata Meditation Center</p>
-                        <p class="font-serif text-xl"> Boyds, Maryland</p>
-                        <p class="font-serif italic text-xl">USA</p>
+                    <div class="m-3">
+                        <p class="font-semibold font-serif mb-3 text-2xl" data-pgc-field="Title">Amata Meditation Center</p>
+                        <p class="font-serif text-xl" data-pgc-field="Location 1">Boyds, Maryland</p>
+                        <p class="font-serif italic text-xl" data-pgc-field="Location 2">USA</p>
                     </div>
                 </div>
-                <div class="flex flex-col h-full min-w-full" data-pg-collapsed>
-                    <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl" data-pg-collapsed>
-                        <img class="aspect-auto min-h-full object-center object-cover" src="images/uszen_exterior_day.jpg">
+                <div class="cursor-pointer duration-300 ease-in-out flex flex-col hover:opacity-100 min-h-full min-w-full transition md:opacity-5" data-pgc="carousel-item" data-pgc-field="header image">
+                    <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl">
+                        <img class="aspect-auto min-h-full object-center object-cover" src="images/uszen_exterior_day.jpg" data-pgc-field="Hero Image">
                     </div>
-                    <div class="m-3" data-pg-collapsed>
-                        <p class="font-semibold font-serif mb-3 text-2xl">US Zen Institute</p>
-                        <p class="font-serif text-xl">Germantown, Maryland</p>
-                        <p class="font-serif italic text-xl">USA</p>
+                    <div class="m-3">
+                        <p class="font-semibold font-serif mb-3 text-2xl" data-pgc-field="Title">US Zen Institute</p>
+                        <p class="font-serif text-xl" data-pgc-field="Location 1">Germantown, Maryland</p>
+                        <p class="font-serif italic text-xl" data-pgc-field="Location 2">USA</p>
                     </div>
                 </div>
-                <div class="flex flex-col h-full min-w-full" data-pg-collapsed>
-                    <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl" data-pg-collapsed>
-                        <img class="aspect-auto min-h-full object-center object-cover" src="images/Scuba-Diving-SAbah-Malaysia-Banner%20(1).jpg">
+                <div class="cursor-pointer duration-300 ease-in-out flex flex-col hover:opacity-100 min-h-full min-w-full transition md:opacity-5" data-pgc="carousel-item" data-pgc-field="header image">
+                    <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl">
+                        <img class="aspect-auto min-h-full object-center object-cover" src="images/uszen_exterior_day.jpg" data-pgc-field="Hero Image">
                     </div>
-                    <div class="m-3" data-pg-collapsed>
-                        <p class="font-semibold font-serif mb-3 text-2xl">Kota Kinabalu Meditation Society</p>
-                        <p class="font-serif text-xl">Kota Kinabalu, Sabah</p>
-                        <p class="font-serif italic text-xl">Malaysia</p>
+                    <div class="m-3">
+                        <p class="font-semibold font-serif mb-3 text-2xl" data-pgc-field="Title">US Zen Institute</p>
+                        <p class="font-serif text-xl" data-pgc-field="Location 1">Germantown, Maryland</p>
+                        <p class="font-serif italic text-xl" data-pgc-field="Location 2">USA</p>
+                    </div>
+                </div>
+                <div class="cursor-pointer duration-300 ease-in-out flex flex-col hover:opacity-100 min-h-full min-w-full transition md:opacity-5" data-pgc-define="carousel-item" data-pgc-define-name="Carousel Item" data-pgc-edit="header image">
+                    <div class="flex-grow m-2 overflow-hidden pt-0 rounded-3xl">
+                        <img class="aspect-auto min-h-full object-center object-cover" src="images/uszen_exterior_day.jpg" data-pgc-edit="Hero Image[src]">
+                    </div>
+                    <div class="m-3">
+                        <p class="font-semibold font-serif mb-3 text-2xl" data-pgc-edit="Title">US Zen Institute</p>
+                        <p class="font-serif text-xl" data-pgc-edit="Location 1">Germantown, Maryland</p>
+                        <p class="font-serif italic text-xl" data-pgc-edit="Location 2">USA</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="p-7 md:max-w-2xl" data-pg-collapsed>
+        <div class="p-7 md:max-w-2xl">
             <h2 class="font-semibold font-serif text-2xl">宗旨 Our Mission</h2>
             <p class="font-sans mt-3">踐行「眾生和天人長遠安穏與利益」的宗旨，修習止、觀及其教理，陶冶人類的善行。  致力於調柔佛教宗派，弘揚跨越宗教、文化與國界的禪法，敞開雙臂歡迎各方的有志者前來參學。</p>
             <p class="mt-3">Putting into practice our mission statement of &ldquo;for the long-term peace and benefits of all beings, devas, and humans.&ldquo; By practicing samatha and vipassana and learning their principles, we will be able to cultivate the goodness in mankind. We strive to foster harmony among different Buddhist lineages, promote a meditation method that crosses the boundary of religion, culture, and national border. We open our arms to welcome all with aspiration to come to learn together.</p>
         </div>
-        <div class="p-7 md:max-w-2xl" data-pg-collapsed>
+        <div class="p-7 md:max-w-2xl">
             <h2 class="font-semibold font-serif text-2xl">法曜法師 Ven. Dr. Dhammadipa Sak, Ph.D.</h2>
             <img src="images/c71134_26e2be0351ad44688b3bac3ec8fca12b.webp" class="mt-3 rounded-2xl">
             <p class="pt-3">法曜博士目前擔任馬里蘭州美國禪學院醍醐寺的住持兼主席，同時也是麻薩諸塞州般若寺的住持。他曾在紐約莊嚴寺擔任住持（2008-2015），並兼任紐約大覺寺方丈（2012-2017）。目前，法曜博士擔任美國佛教協會的副會長。他於2020年在台灣創立中華習禪會，致力於推廣各類禪修與佛教教理。</p>
