Run pinegrow component update to propagate nav change to child pages

--- a/mission.html
+++ b/mission.html
@@ -12,11 +12,11 @@
     <body class="bg-white md:flex md:flex-col md:items-center" style="overflow-x: hidden">
         <div class="flex flex-col items-center max-h-[900px] max-h-screen min-h-screen md:max-w-2xl">
             <div class="flex mt-4" data-pgc="logo">
-                <div class="flex items-center justify-center w-full"><a href="index.html"><img src="images/Screenshot%202024-01-08%20094916.png" class="text-left w-64"></a>
+                <div class="flex items-center justify-center w-full">
+                    <a href="index.html"><img src="images/Screenshot%202024-01-08%20094916.png" class="text-left w-64"></a>
                 </div>
             </div>
-            <nav class="flex mt-4 flow-row justify-items-center justify-between" data-pgc="nav"><a href="mission.html" class="text-blue-500 hover:text-blue-800 mx-2">Mission</a><span>|</span><a href="abbot.html" class="text-blue-500 hover:text-blue-800 mx-2">The Abbot</a><span>|</span>
-                <a href="#" class="text-blue-500 hover:text-blue-800 mx-2">Contact</a>
+            <nav class="flex mt-4 flow-row justify-items-center justify-between" data-pgc="nav"><a href="mission.html" class="text-blue-500 hover:text-blue-800 mx-2">Mission</a><span>|</span><a href="abbot.html" class="text-blue-500 hover:text-blue-800 mx-2">The Abbot</a><span>|</span><a href="contact.html" class="text-blue-500 hover:text-blue-800 mx-2">Contact</a>
             </nav>
             <section data-pgc-field="content">
                 <div class="p-7 md:max-w-2xl">
